...
        app:layout_constraintTop_toBottomOf="@id/meetingSubject"
        android:text="johann.dejaham@gmail.com"
        android:textStyle="italic"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/meetingRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/size_text"
        android:text="Salle Toad"
        android:textColor="@color/teal_200"
...
